# actiona

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Microsoft.VC90.CRT.manifest  NEWS  README  README.md  actiona.desktop  actiona.pro  actionaz.desktop  actionaz.pro  common.pri  locale_release.sh  locale_update.sh  main.pro  run.sh  translations.pri
actexec/: CMakeLists.txt
actexec/src/: codeexecuter.cpp  codeexecuter.hpp  executer.hpp  main.cpp  scriptexecuter.cpp  scriptexecuter.hpp
actexec/translations/: actexec_fr_FR.ts  actexec_pt_BR.ts  actexec_tr_TR.ts  actexec_zh_CN.ts
actiona/: CMakeLists.txt  actiona.qrc
actiona/src/: aboutdialog.cpp  actiondialog.cpp  changelogdialog.cpp  deleteactionpushbutton.cpp  filetypeguesser.cpp  filetypeguesser.hpp  filterlineedit.cpp  flagscombobox.cpp  global.cpp  main.cpp  mainwindow.cpp  newactiondialog.cpp  newactiondialog.hpp  newactionmodel.cpp  newactionproxymodel.cpp  resourcedialog.cpp  resourcedialog.hpp  resourcetablewidget.cpp  resourcetypedelegate.cpp  scriptcontentdialog.hpp  scriptmodel.cpp  scriptmodelundocommands.cpp  scriptparametersdialog.cpp  scriptproxymodel.cpp  scriptsettingsdialog.cpp  scripttreeview.hpp  settingsdialog.cpp  settingsdialog.hpp  settingskeyedit.cpp  themeselection.cpp  themeselection.hpp
actiona/translations/: actiona_fr_FR.ts  actiona_pt_BR.ts  actiona_tr_TR.ts  actiona_zh_CN.ts
actiona/ui/: aboutdialog.ui  actiondialog.ui  mainwindow.ui  newactiondialog.ui  resourcedialog.ui  scriptparametersdialog.ui  scriptsettingsdialog.ui  settingsdialog.ui
actions/: CMakeLists.txt  common_actions.pri
actions/actionpackdata/: CMakeLists.txt  actionpackdata.h  actionpackdata.pro  actionpackdata.qrc  actionreadbinaryfiledefinition.h  actionreadbinaryfileinstance.h  actionreadclipboarddefinition.h  actionreadclipboardinstance.h  actionreadinifiledefinition.h  actionreadinifileinstance.h  actionreadregistrydefinition.h  actionreadtextfiledefinition.h  actionreadtextfileinstance.h  actionwritebinaryfiledefinition.h  actionwritebinaryfileinstance.h  actionwriteclipboarddefinition.h  actionwriteclipboardinstance.h  actionwriteinifiledefinition.h  actionwriteregistrydefinition.h  data.json
actions/actionpackdevice/: CMakeLists.txt  actionclick.h  actionclickdefinition.h  actionclickinstance.cpp  actionclickinstance.h  actionkeydefinition.h  actionkeyinstance.cpp  actionkeyinstance.h  actionmovecursordefinition.h  actionmovecursorinstance.h  actionpackdevice.h  actionpackdevice.pro  actionpackdevice.qrc  actiontext.h  actiontextdefinition.h  actiontextinstance.cpp  actiontextinstance.h  actionwheeldefinition.h  actionwheelinstance.cpp  actionwheelinstance.h  device.json  keyboarddevice.cpp  keyboarddevice.h  mousedevice.cpp  mousedevice.h
actions/actionpackinternal/: CMakeLists.txt  actioncode.h  actioncodedefinition.h  actioncodeinstance.h  actionexitdefinition.h  actionexitinstance.h  actiongoto.h  actiongotodefinition.h  actiongotoinstance.h  actionloop.h  actionloopdefinition.h  actionloopinstance.h  actionnoop.h  actionnoopdefinition.h  actionnoopinstance.h  actionpackinternal.h  actionpackinternal.pro  actionpackinternal.qrc  actionpause.h  actionpausedefinition.h  actionpauseinstance.h  actionstop.h  actionstopdefinition.h  actionstopinstance.h  actiontimeconditiondefinition.h  actiontimeconditioninstance.h  actionvariable.h  actionvariableconditiondefinition.h  actionvariableconditioninstance.cpp  actionvariableconditioninstance.h  actionvariabledefinition.h  actionvariableinstance.h  (+1 more)
actiontools/: CMakeLists.txt  abstractcodeeditor.h  action.cpp  action.h  actionbuffer.cpp  actionbuffer.h  actiondefinition.cpp  actiondefinition.h  actiondefinitionenums.h  actionexception.cpp  actionexception.h  actionexecution.cpp  actionexecution.h  actionfactory.cpp  actionfactory.h  actioninstance.cpp  actioninstance.h  actioninstancebuffer.cpp  actioninstancebuffer.h  actioninstanceexecutionhelper.cpp  actioninstanceexecutionhelper.h  actioninterface.cpp  actioninterface.h  actionpack.cpp  actionpack.h  actionpackinterface.h  actiontools.pro  actiontools.qrc  actiontools_global.h  booleanedit.cpp  booleanedit.h  booleanedit.ui  booleanparameterdefinition.cpp  booleanparameterdefinition.h  choosepositionpushbutton.cpp  choosepositionpushbutton.h  choosesizepushbutton.cpp  choosesizepushbutton.h  choosewindowpushbutton.cpp  choosewindowpushbutton.h  (+221 more)
backend/: CMakeLists.txt
executer/: CMakeLists.txt  codeactiona.cpp  codeactiona.h  codeactionaz.cpp  codeactionaz.h  codeconsole.cpp  codeconsole.h  codeexecution.cpp  codeexecution.h  codeinitializer.cpp  codeinitializer.h  codestdio.cpp  codestdio.h  executer.cpp  executer.h  executer.pro  executer.qrc  executer_global.h  executer_pch.cpp  executer_pch.h  executionalgorithms.cpp  executionalgorithms.h  executionenvironment.cpp  executionenvironment.h  executionwindow.cpp  executionwindow.h  executionwindow.ui  scriptagent.cpp  scriptagent.h
execution/: CMakeLists.txt
gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  actiondialog.cpp  actiondialog.h  actiondialog.ui  actionfilteringflags.h  app.rc  changelogdialog.cpp  changelogdialog.h  changelogdialog.ui  colorpickerpushbutton.cpp  colorpickerpushbutton.h  deleteactionpushbutton.cpp  deleteactionpushbutton.h  filetypeguesser.cpp  filetypeguesser.h  filterlineedit.cpp  filterlineedit.h  flagscombobox.cpp  flagscombobox.h  global.cpp  global.h  gui.pro  gui.qrc  gui.rc  heatmapmode.h  keywords.cpp  keywords.h  languages.cpp  languages.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manifest.rc  manifest.xml  modeltest.cpp  modeltest.h  (+49 more)
testing/: CMakeLists.txt
tools/: CMakeLists.txt  actioninfo.cpp  actioninfo.h  highresolutiontimer.cpp  highresolutiontimer.h  languages.cpp  languages.h  sevenziparchive.cpp  sevenziparchive.h  sevenziparchivewrite.cpp  sevenziparchivewrite.h  sevenzipfile.h  stringlistpair.h  tools.pro  tools_global.h  updateclient.cpp  updateclient.h  updater.cpp  updater.h  version.cpp  version.h
(+1571 files in other folders)
